examples/test/testpolicy16119.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16119
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key37: value18
      key42: value8
      key15: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value18
          key10: value0
          key48: value12
      podSelector:
        matchLabels:
          key17: value23
